# sycurobot

environments_public/: CMakeLists.txt  README.md  boot.sh  detect.sh  download.sh  json2dot.py  manual_competition_setup.org  out.sh  package.xml  run_fake_team.sh  setOffset.py  stop.sh  stop_fake_team.sh
environments_public/common/: DefaultVCM.json  Legup.json  LowLevelConfig.xml  captain.json  new_movement.json  old_sigmaban.urdf  ptgrey_calib.yml  sigmaban.urdf
environments_public/common/dnn/: 2017_04_20.json  post_1conv32_pool8.json
environments_public/common/dnn/balls/: structure.json
environments_public/common/dnn/objects/: structure.json
environments_public/common/dnn/posts/: results.csv  (+7 more)
environments_public/common/field_dimensions/: rules.json
environments_public/common/kick_controler/: eirlab_policy.json  eirlab_problem.json  shared_policy.json  shared_problem.json
environments_public/common/kicks/: sigmaban_plus_kicks.json
environments_public/common/vision_filters/: all.json  all_fake.json  all_tom.json  aruco_calib.json  ball_detection.json  ball_entries_extractor.json  ball_only.json  ball_only_fake.json  bydnn.json  clipping.json  colors.json  colors.json.matin  colors.json.night  colors_tom.json  goals.json  goals_tom.json  object_detection.json  robots.json  roi_extractor.json  sycu_robot_detection.json  visual_compass.json
environments_public/default_robot/: VCM.json  compiled_kick.json  compiled_kick_classic.json  compiled_kick_lateral.json  compiled_kick_small.json  field.json  kick.json  kickStrategy_with_grass.json  kick_classic.json  kick_lateral.json  kick_small.json  learned_approach  rhal.json  rhalSafeArms.json  standup_front.json  staticPositions.json  tom.urdf
environments_public/fake/: .gitignore  KickModelCollection.json  KidSize  KidSizeNoVision  KidSize_test  captain.json  compiled_kick_classic.json  compiled_kick_lateral.json  compiled_kick_small.json  debug_run.sh  detect  extract_ball_trajectories.sh  extract_patches.sh  fakecd  genStrategies.sh  kick_classic.json  kick_lateral.json  kick_small.json  learned_approach  maintenance.json  new_movement.json  plotStrategy.sh  prepare.sh  rhal.json  run.sh  run_nv.sh  run_viewer.sh  run_viewer_corrected.sh  run_viewer_read.sh  standup_back.json  standup_front.json
environments_public/kicks/: kick.json  kick_2016.json  kick_45_cata.json  kick_droit.json  kick_lateral.json  kick_save.json  kick_save3.json  kick_seq.json  kick_tom.json  kick_yaw.json
environments_public/rhio/: xbox_walk.json
environments_public/scripts/: correlation.py
environments_public/strategies/: .gitignore  against_grass.json  brest_carpet.json  eirlab_against_grass.json  eirlab_no_lateral_against_grass.json  eirlab_no_lateral_with_grass.json  eirlab_with_grass.json  generate_strategies.sh  iranopen_v1_against_grass.json  iranopen_v1_against_grass_no_lateral.json  iranopen_v1_with_grass.json  iranopen_v1_with_grass_no_lateral.json  lateral_corridor.json  left_corridor.json  plotStrategy.sh  plot_strategies.sh  plot_strategy.r  right_corridor.json  right_corridor_against_grass.json  right_corridor_with_grass.json  robocup2018_against_grass.json  robocup2018_with_grass.json  sigmaban_plus_kicks.json  with_grass.json
environments_public/sycu1/: VCM.json  compiled_kick_classic.json  compiled_kick_small.json  kicStrategy_counter_grass.json  kick_classic.json  rhal.json  standup_front.json
environments_public/sycu2/: KickModelCollection.json  VCM.json  kicStrategy_with_grass.json  kickStrategy_counter_grass.json  kick_lateral.json  kick_small.json  rhal.json  standup_back.json  values.conf
environments_public/sycu3/: .kick_lateral.json.swp  VCM.json  compiled_kick_lateral.json  rhal.json
environments_public/sycu4/: Legup.json  VCM.json  lay_down.json  rhal.json  standup_front.json  vision_config.json
environments_public/sycu5/: VCM.json  camera_calib.yml  kick_classic.json  kick_classic.json~  odometryParams.json  rhal.json  sigmaban.urdf
environments_public/sycu6/: .kick_classic.json.swp  VCM.json  compiled_kick_classic.json  rhal.json
hl_kid_public/: CMakeLists.txt  CMakeLists.txt-test1  README.md  package.xml
hl_kid_public/KidSize/: main.cpp
hl_kid_public/Motion/moves/: AutonomousBehaviour.cpp  AutonomousBehaviour.h  CameraCalibration.cpp  Legup.cpp  Legup.h  Moves.cpp  Placer.cpp  Placer.h  Sources.cmake  TemplateBehaviour.cpp  TemplateBehaviour.h  TemplateMovement.cpp  TemplateMovement.h  TemplateMovementSplines.cpp  TemplateMovementSplines.h  TemplateSTM.cpp  TemplateSTM.h  Templategoalkeeper.cpp  Templategoalkeeper.h  api_example.org
hl_kid_public/Motion/services/: CaptainService.cpp  LocalisationService.cpp  LocalisationService.h  RefereeService.cpp
hl_kid_public/Vision_obj/: postprocess.cpp  preprocess.cpp
hl_kid_public/Vision_obj/Application/: Application.cpp  Application.hpp
hl_kid_public/Vision_obj/Binding/: LocalisationBinding.cpp  LocalisationBinding.hpp  Robocup.cpp  Robocup.cpp-bak  Robocup.hpp  Robocup.hpp-bak  SpecialImageHandler.cpp  SpecialImageHandler.hpp
hl_kid_public/Vision_obj/CameraState/: CameraState.cpp  CameraState.hpp
hl_kid_public/Vision_obj/Field/: Field.cpp  Field.hpp
hl_kid_public/Vision_obj/Filters/: CMakeLists.txt  Filter.cpp  Filter.hpp  FilterFactory.cpp  FilterFactory.hpp  Pipeline.cpp  Pipeline.hpp  Sources.cmake
hl_kid_public/Vision_obj/FrameSource/: Exceptions.hpp  FrameSrc.hpp  ImageSequence.cpp  ImageSequence.hpp
hl_kid_public/Vision_obj/Hough/: Hough.cpp  Hough.hpp
hl_kid_public/Vision_obj/Localisation/: RadarFilter.hpp  RadarFilterPoint.cpp  RadarFilterPoint.hpp
hl_kid_public/Vision_obj/Utils/: Drawing.cpp  Drawing.hpp  HomogeneousTransform.cpp  HomogeneousTransform.hpp  ImageLogger.cpp  ImageLogger.h  Interface.cpp  Interface.h  OpencvUtils.cpp  OpencvUtils.h  ParamsContainer.hpp  ROITools.cpp  ROITools.hpp  SafePtr.hpp  Segment.hpp  Sources.cmake
hl_kid_public/Vision_obj/detect_server/: Sources.cmake  detect.cpp  detect.h  main.cpp
monitoring_robocup/: .gitignore  CMakeLists.txt  log.cpp  log.h  monitoring.cpp  package.xml
(+151 files in other folders)
