<?xml version="1.0"?>
<package>
    <!--
         Do not delete this file, it is required to get workspace pulling
         the repository
    -->
  <name>env</name>
  <version>0.0.0</version>
  <description>
    Environnement
  </description>

  <maintainer email="qrouxel@labri.fr">Quentin Rouxel</maintainer>
  <maintainer email="rfabre@labri.fr">Rémi Fabre</maintainer>
  <maintainer email="gpassault@labri.fr">Grégoire Passault</maintainer>
  <maintainer email="ly@labri.fr">Olivier Ly</maintainer>
  <maintainer email="snguyen@labri.fr">Steve N'guyen</maintainer>
  <maintainer email="lhofer@labri.fr">Ludovic Hofer</maintainer>

  <license>MIT</license>

  <!-- only required for run_tests command to work properly-->
  <buildtool_depend>catkin</buildtool_depend>

</package>
