<?xml version="1.0"?>
<package>
  <name>monitoring_robocup</name>
  <version>0.0.0</version>
  <description>
    UDP viewer for RhobanServer
  </description>

  <maintainer email="qrouxel@labri.fr">Quentin Rouxel</maintainer>

  <license>MIT</license>

  <author email="qrouxel@labri.fr">Quentin Rouxel</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rhoban_utils</build_depend> <!-- rhoban/utils -->
  <build_depend>rhoban_geometry</build_depend> <!-- rhoban/geometry -->
  <build_depend>rhoban_team_play</build_depend> <!-- rhoban/teamplay -->
  <build_depend>robocup_referee</build_depend> <!-- rhoban/robocupreferee -->
  <!--  <build_depend>sfml</build_depend>  rhobandeps/sfml -->

  <run_depend>rhoban_utils</run_depend>
  <run_depend>rhoban_geometry</run_depend>
  <run_depend>robocup_referee</run_depend>
  <run_depend>rhoban_team_play</run_depend>
  <!--  <run_depend>sfml</run_depend>-->

</package>

